<resources>
    <string name="global_btn_ok">OK</string>
    <string name="global_btn_yes">Yes</string>
    <string name="global_btn_cancel">Cancel</string>
    <string name="global_btn_save">Save</string>
    <string name="global_btn_new">New</string>
    <string name="global_btn_edit">Edit</string>
    <string name="global_btn_del">Delete</string>
    <string name="global_btn_refresh">Refresh</string>
    <string name="global_btn_close">Close</string>

    <string name="dlg__generic_wait__label">Please wait…</string>

    <string name="act__main__title">KForge Admin</string>

    <string name="act__login__et_username_hint">Username</string>
    <string name="act__login__et_password_hint">Password</string>
    <string name="act__login__btn_login">Login</string>
    <string name="act__login__title">Login</string>
    <string name="act__login__error_username_empty">Please enter your username</string>
    <string name="act__login__error_password_empty">Please enter your password</string>

    <string name="main_menu__admin_users">Admin users</string>

    <string name="act__admin_users__title">Admin users</string>
    <string name="dlg__session_expired__msg">You were logged out due to inactivity</string>
    <string name="dlg__invalid_login_msg">Unable to login you with the provided username and password. Please check if you entered them correctly.</string>
    <string name="dlg__comm_error_msg">There is a problem communicating with the server. Please try again later.</string>
    <string name="global_mi_refresh">Refresh</string>
    <string name="act__admin_user_manage__title">Manage admin user</string>
    <string name="act__admin_user_manage__tv_username">Username</string>
    <string name="act__admin_user_manage__tv_name">Name</string>
    <string name="act__admin_user_manage__tv_disabled">Disabled</string>
    <string name="act__admin_user_manage__tv_superadmin">Superadmin</string>
    <string name="act__admin_user_manage__mi_disable">Toggle disable user</string>
    <string name="act__admin_user_manage__mi_superadmin">Toggle super admin</string>
    <string name="act__admin_user_manage__create_new">Create new admin user</string>

    <string name="act__admin_user_create__et_username">Username</string>
    <string name="act__admin_user_create__et_name">Name</string>
    <string name="act__admin_user_create__cb_superadmin">Super admin</string>
    <string name="act__admin_user_create__et_password">Password</string>
    <string name="act__admin_user_create__et_password2">Password again</string>
    <string name="act__admin_user_create__title">Create new admin</string>
    <string name="global_mi_save">Save</string>
    <string name="global_mi_create">Create new</string>
    <string name="act__admin_user_create__et_username_error">Invalid username, must start with letter, min 6 characters</string>
    <string name="act__admin_user_create__et_password_error_short">Password too short must be at least %s characters</string>
    <string name="act__admin_user_create__et_password_error_mismatch">Passwords don\'t match</string>
    <string name="act__admin_user_manage__mi_change_password">Change password</string>
    <string name="act__admin_change_password__title">Change password</string>
    <string name="act__main__btn_login">Login</string>
    <string name="act__main__mi_logout">Logout</string>

</resources>
