<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_activity_padding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/act__admin_user_manage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/act__admin_user_manage__tv_username" />

    <TextView
        android:id="@+id/tvUsername"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/act__admin_user_manage__tv_name" />

    <TextView
        android:id="@+id/tvName"
        style="@style/MediumText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSuperAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/act__admin_user_manage__tv_superadmin"
        android:textColor="#00BB00" />

    <TextView
        android:id="@+id/tvDisabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/act__admin_user_manage__tv_disabled"
        android:textColor="#ff0000" />
</LinearLayout>